# geeks-tracker

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .pnp.cjs  .yarnrc.yml  Cargo.toml  LICENSE  README.md  biome.json  index.html  jest.config.js  jest.setup.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yaml  ci.yml  release.yaml
app/: Cargo.toml  package.json  tauri.conf.json
app/src/: application.rs  commands.rs  dispatcher.rs  error.rs  global_shortcut.rs  main.rs  schedule.rs  snapshots.rs  win.rs  workspace.rs
app/src/utils/: frontmatter.rs  mod.rs  win.rs
command/: index.d.ts  package.json
command/src/: geeks-tracker.grammar
core/: Cargo.toml  index.ts  package.json  type.gen.ts
core/src/: lib.rs
core/src/dispatch/: message.rs  mod.rs
core/src/domain/: error.rs  mod.rs  task.rs
core/src/eventsourcing/: aggregate.rs  command.rs  compose.rs  event.rs  eventstore.rs  mod.rs  snapshot.rs  types.rs
core/src/eventsourcing/dummy/: mod.rs  todo_domain.rs
core/src/eventsourcing/git/: eventstore.rs  mod.rs  snapshot.rs
core/src/git/: commit.rs  commit_info.rs  commit_message.rs  commit_reader.rs  error.rs  mod.rs  repository.rs  status.rs
crates/cli/: Cargo.toml
language/: biome.json  package.json  rollup.config.js
language/src/: geeks-tracker.grammar  highlight.js  parser.d.ts  parser.spec.ts
language/src/__tests__/: commands.txt
parser/: .gitignore  package.json
src/: App.tsx  index.css  location.ts  main.tsx  queryClient.ts  styles.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/common/: Cargo.toml
src-tauri/common/src/: colors.rs  constants.rs  lib.rs
src-tauri/constants/: Cargo.toml
src-tauri/core/: Cargo.toml
src-tauri/core/src/: aggregate.rs  application.rs  command.rs  event.rs  eventstore.rs  lib.rs  saga.rs  testing.rs
src-tauri/core/src/testing/: mock_eventstore.rs  mod.rs  store.rs  todo.rs
src-tauri/event-sourcing/: Cargo.toml
src-tauri/event-sourcing/src/: event.rs  eventstore.rs  eventstore_error.rs  git_eventstore.rs  lib.rs  recorded_event.rs
src-tauri/eventstore/: Cargo.toml
src-tauri/eventstore/src/: eventstore.rs  eventstore_error.rs  git_eventstore.rs  git_utils.rs  lib.rs  memory_eventstore.rs  testing.rs
src-tauri/eventstore/tests/: a.rs
src-tauri/eventstore/tests/fixtures/append/_git/refs/heads/: main
src-tauri/git/: Cargo.toml
src-tauri/git-utils/: Cargo.toml
src-tauri/git-utils/src/: git_utils.rs  lib.rs
src-tauri/git/src/: commit.rs  commit_info.rs  commit_message.rs  commit_reader.rs  error.rs  git_utils.rs  lib.rs  repository.rs
src-tauri/issues/: Cargo.toml
src-tauri/issues/src/: lib.rs
src-tauri/issues/src/issue/: aggregate.rs  command.rs  error.rs  event.rs  mod.rs  state.rs
src-tauri/issues/src/issue_status/: aggregate.rs  command.rs  error.rs  event.rs  mod.rs  state.rs
src-tauri/src/: app_error.rs  app_state.rs  commands.rs  constants.rs  git_eventstore.rs  global_shortcuts.rs  main.rs  os_type.rs  tray.rs  windows.rs  workspace.rs
src-tauri/src/application/: application.rs  command_handler.rs  file_snapshot.rs  mod.rs  query_handler.rs
src-tauri/src/domain/: category.rs  mod.rs  note.rs
src-tauri/testing/: Cargo.toml
src-tauri/testing/src/: eventstore.rs  git.rs  lib.rs  mock_eventstore.rs
src/components/Accelerator/: Accelerator.spec.tsx  Accelerator.tsx  hotkey.ts  index.tsx  types.ts
src/components/CategoryTabs/: CategoryTabsContents.tsx  CategoryTabsList.tsx  CategoryTabsRoot.tsx  index.ts
src/components/Editor/: Editor.tsx  index.tsx
src/components/FlatButton/: FlatButton.tsx
src/components/FlatIconButton/: FlatIconButton.tsx  index.ts
src/components/FlatTabs/: index.tsx
src/components/NoteEditor/: NoteEditor.tsx  index.ts
src/components/ViewDateNavigator/: ViewDateNavigator.tsx  index.ts
src/hooks/: useCategories.spec.ts  useCategories.ts  useEditor.ts  useGlobalEscKeydown.spec.tsx  useGlobalEscKeydown.ts  useKeydown.ts  useNote.spec.ts  useNote.ts  useNoteOperations.spec.ts  useNoteOperations.ts  usePreservedCallback.ts  useSettings.spec.ts  useSettings.ts  useStore.spec.ts  useStore.ts  useViewDate.spec.ts  useViewDate.ts
src/remotes/: executeCategoryCommand.ts  executeCommand.ts  getNote.ts  listCategories.ts
src/routes/Main/: Main.tsx
src/testing/: DummyCategory.ts  DummyNote.ts  mockIPC.ts  mockOSType.ts  mockStore.ts  renderWithTestBed.tsx
src/types/: Category.ts  CategoryCommand.ts  Note.ts  NoteCommand.ts  Settings.ts  array.ts  object.ts
src/utils/: assert.spec.ts  assert.ts  osType.ts  types.ts  uid.ts
testing/: Cargo.toml  package.json
testing/src/: git.rs  lib.rs
web/: index.html  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
web/src/: app.css  app.tsx  bridges.ts  editor.ts  events.ts  global.ts  ms.ts  queries.ts  settings.ts
web/src/components/: CommandInput.tsx  Tasks.tsx  Titlebar.tsx
web/src/icons/: ChevronDownIcon.tsx  ChevronUpIcon.tsx  ClockIcon.tsx
web/src/routes/: __root.tsx  index.tsx
