[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
rust-version = "1.75"
authors = ["seokju.me@gmail.com"]
edition = "2021"
repository = "https://github.com/seokju-na/geeks-tracker"
publish = false

[workspace.dependencies]
geeks-tracker-cli = { path = "crates/cli" }
