[workspace]
members = ["app", "core", "testing"]
default-members = ["app"]
resolver = "2"

[workspace.package]
version = "0.0.0"
rust-version = "1.75"
authors = ["seokju.me@gmail.com"]
edition = "2021"
repository = "https://github.com/seokju-na/geeks-tracker"
license = "MIT"
publish = false

[workspace.dependencies]
async-trait = "0.1"
async-channel = "2.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.36.0", features = ["full"] }
tauri = { version = "1.5", features = ["global-shortcut", "os-all", "system-tray", "window-start-dragging", "tracing", "macos-private-api"] }
tauri-build = { version = "1.5", features = [] }
window-vibrancy = "0.4"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
typeshare = "1"
git2 = "0.18"
typed-builder = "0.18"
log = "0.4"
