[package]
name = "geeks-tracker-core"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[lib]
path = "src/lib.rs"
bench = false
doctest = false

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
typeshare = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
geeks-tracker-testing = { path = "../testing" }
