[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Seokju Na <seokju.me@gmail.com>"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["global-shortcut", "system-tray"] }
thiserror = "1.0"
chrono = "0.4.19"
tokio = { version = "1.20", features = ["full"] }
async-trait = "0.1.56"
walkdir = "2.3.2"
git2 = "0.14.4"

geeks_event_sourcing = "0.3.1"
geeks_event_sourcing_git = "0.7.0"
geeks_git = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

[dev-dependencies]
tempfile = "3.3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
