[package]
name = "geeks-tracker-testing"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[lib]
path = "src/lib.rs"
bench = false
doctest = false

[dependencies]
git2 = { workspace = true }
tempdir = "0.3"
rand = "0.8"
