[package]
name = "core"
version = "0.1.0"
authors = ["Seokju Na <seokju.me@gmail.com"]
edition = "2021"
rust-version = "1.57"

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
events_emitter = "0.1.3"
thiserror = "1.0.30"
chrono = "0.4.19"

[dev-dependencies]
testing = { path = "../testing" }
