[package]
name = "event-sourcing"
version = "0.1.0"
authors = ["Seokju Na <seokju.me@gmail.com"]
edition = "2021"
rust-version = "1.57"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.13.25"
git-utils = { path = "../git-utils" }
thiserror = "1.0.30"
anyhow = "1.0.55"

[dev-dependencies]
testing = { path = "../testing" }
