[package]
name = "eventstore"
version = "0.1.0"
authors = ["Seokju Na <seokju.me@gmail.com"]
edition = "2021"
rust-version = "1.57"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.52"
nanoid = "0.4.0"
tokio = { version = "1", features = ["full"] }
