[package]
name = "geeks-tracker-git"
version = "0.1.0"
authors = ["Seokju Na <seokju.me@gmail.com"]
edition = "2021"
rust-version = "1.57"

[dependencies]
git2 = "0.13.25"
geeks-tracker-common = { path = "../common" }
thiserror = "1.0.30"

[dev-dependencies]
geeks-tracker-testing = { path = "../testing" }
